--- a/sm/main/default/layouts/TaxTreatment-Tax Treatment Layout.layout-meta.xml
+++ b/sm/main/default/layouts/TaxTreatment-Tax Treatment Layout.layout-meta.xml
@@ -12,6 +12,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>LegalEntityId</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>ProductCode</field>
             </layoutItems>
             <layoutItems>
