formatting & naming conventions

--- a/sm/sm-temp/main/default/aura/bsgToInvoice/bsgToInvoice.cmp
+++ b/sm/sm-temp/main/default/aura/bsgToInvoice/bsgToInvoice.cmp
@@ -1,4 +1,4 @@
-<aura:component implements="force:hasRecordId,force:lightningQuickAction" controller="bsgToInvoiceController" >
+<aura:component implements="force:hasRecordId,force:lightningQuickAction" controller="BsgToInvoiceController" >
     <aura:attribute name="message" type="String" default="Invoking action..."/>
 	<aura:handler name="init" value="{!this}" action="{!c.onInit}"/> 
     
